--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+main{
+  min-height: 90vh;
+  max-width: 1280px;
+  margin: auto;
+  padding: 15px;
+}
 
